--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "licenz",
   "version": "0.0.1",
   "description": "Make sure your NPM modules have licenses.",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "bin": "./bin/licenz",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tape test/**/*.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,12 @@
   "bugs": {
     "url": "https://github.com/MRN-Code/licenz/issues"
   },
-  "homepage": "https://github.com/MRN-Code/licenz#readme"
+  "homepage": "https://github.com/MRN-Code/licenz#readme",
+  "devDependencies": {
+    "tape": "^4.4.0"
+  },
+  "dependencies": {
+    "license-checker": "^4.2.0",
+    "lodash.noop": "^3.0.0"
+  }
 }
