--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "bin": "./bin/licenz",
   "scripts": {
-    "test": "tape test/**/*.js"
+    "test": "tape 'test/**/*.js'"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,8 @@
   },
   "dependencies": {
     "license-checker": "^4.2.0",
-    "lodash.noop": "^3.0.0"
+    "lodash.assign": "^4.0.0",
+    "lodash.noop": "^3.0.0",
+    "semver": "^5.1.0"
   }
 }
