--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "tape": "^4.4.0"
   },
   "dependencies": {
+    "commander": "^2.9.0",
     "license-checker": "^4.2.0",
     "lodash.assign": "^4.0.0",
+    "lodash.isundefined": "^3.0.1",
     "lodash.noop": "^3.0.0",
+    "lodash.omitby": "^4.0.0",
     "semver": "^5.1.0"
   }
 }
