--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "bin": "./bin/licenz",
   "scripts": {
     "lint": "eslint bin lib test",
-    "test": "tape 'test/**/*.js'"
+    "test": "tape 'test/**/*.js'",
+    "validate": "npm ls"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
   "homepage": "https://github.com/MRN-Code/licenz#readme",
   "devDependencies": {
     "eslint": "^1.10.3",
+    "pre-commit": "^1.1.2",
     "tape": "^4.4.0"
   },
   "dependencies": {
@@ -36,5 +38,10 @@
     "lodash.noop": "^3.0.0",
     "lodash.omitby": "^4.0.0",
     "semver": "^5.1.0"
-  }
+  },
+  "precommit": [
+    "lint",
+    "validate",
+    "test"
+  ]
 }
