--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "main": "lib/index.js",
   "bin": "./bin/licenz",
   "scripts": {
+    "docs": "jsdoc -d docs -R README.md lib/{*.js,**/*.js} && cp -R img docs",
     "lint": "eslint bin lib test",
+    "postpublish": "npm run docs && gh-pages -d docs",
+    "preversion": "git checkout master && git pull && npm ls",
+    "publish-patch": "npm run preversion && npm version patch && git push origin master --tags && npm publish",
+    "publish-minor": "npm run preversion && npm version minor && git push origin master --tags && npm publish",
+    "publish-major": "npm run preversion && npm version major && git push origin master --tags && npm publish",
     "test": "tape 'test/**/*.js'",
     "validate": "npm ls"
   },
@@ -27,6 +33,8 @@
   "homepage": "https://github.com/MRN-Code/licenz#readme",
   "devDependencies": {
     "eslint": "^1.10.3",
+    "gh-pages": "^0.8.0",
+    "jsdoc": "^3.4.0",
     "pre-commit": "^1.1.2",
     "tape": "^4.4.0"
   },
@@ -42,6 +50,7 @@
   "precommit": [
     "lint",
     "validate",
-    "test"
+    "test",
+    "docs"
   ]
 }
