--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,9 @@
 {
-    "env": {
-        "browser": false,
-        "node": true
-    },
-    "rules": {
-        "indent": 2,
-        "semi": [2, "always"],
-        "strict": [2, "global"]
-    }
+  "extends": "airbnb",
+  "plugins": [
+    "react"
+  ],
+  "rules": {
+    "strict": 0
+  }
 }
